add_subdirectory(audio_sink)
add_subdirectory(field_invert)
add_subdirectory(ntsc_yc_source)
add_subdirectory(ntsc_comp_source)
add_subdirectory(pal_comp_source)
add_subdirectory(pal_yc_source)
add_subdirectory(field_map)
add_subdirectory(dropout_map)
add_subdirectory(source_align)
add_subdirectory(sinks)
add_subdirectory(dropout_correct)
add_subdirectory(mask_line)
add_subdirectory(video_params)
add_subdirectory(cc_sink)
add_subdirectory(dropout_analysis_sink)
add_subdirectory(snr_analysis_sink)
add_subdirectory(burst_level_analysis_sink)
add_subdirectory(hackdac_sink)
add_subdirectory(stacker)
add_subdirectory(raw_efm_sink)
add_subdirectory(efm_sink)
add_subdirectory(ac3rf_sink)
add_subdirectory(ld_sink)
add_subdirectory(daphne_vbi_sink)