add_subdirectory(common)
add_subdirectory(audio_sink)
add_subdirectory(tbc_source)
add_subdirectory(cvbs_source)
add_subdirectory(dropout_map)
add_subdirectory(source_align)
add_subdirectory(sinks)
add_subdirectory(dropout_correct)
add_subdirectory(mask_line)
add_subdirectory(video_params)
add_subdirectory(cc_sink)
add_subdirectory(dropout_analysis_sink)
add_subdirectory(snr_analysis_sink)
add_subdirectory(burst_level_analysis_sink)
add_subdirectory(stacker)
add_subdirectory(frame_map)
add_subdirectory(raw_efm_sink)
add_subdirectory(efm_sink)
add_subdirectory(efm_audio_decode)
add_subdirectory(audio_import)
add_subdirectory(audio_channel_map)
add_subdirectory(audio_align)
add_subdirectory(ac3rf_sink)
add_subdirectory(ld_sink)
add_subdirectory(daphne_vbi_sink)
add_subdirectory(cvbs_sink)
